[package]
name = "cfproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
boringtun = { version = "0.6.0", features = ["thiserror"] }
color-eyre = "0.6.2"
hickory-resolver = { version = "0.24.0", features = ["dns-over-native-tls"] }
packet-builder = "0.7.0"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
